// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for the connected Sidebar component with reduxInitialState should render with given state from Redux store 1`] = `
.c2 {
  margin: 2.4rem 1.2rem 0.4rem;
  font-size: 1.2rem;
  line-height: 2;
  -webkit-letter-spacing: 0.05rem;
  -moz-letter-spacing: 0.05rem;
  -ms-letter-spacing: 0.05rem;
  letter-spacing: 0.05rem;
  text-transform: uppercase;
  display: block;
  font-weight: 700;
}

.c5.c5 {
  background-color: #fff;
  font-size: 1.4rem;
  line-height: 2;
  padding: 0 1.2rem;
  display: block;
  border-radius: 3px;
  border: 1px solid #BABEC4;
}

.c5.c5.c5.c5:hover {
  border: 1px solid #fff;
  box-shadow: 0 0 0 4px #DBE3F5;
}

.c5.c5.c5.c5.Mui-focused {
  border: 1px solid #4D73CE;
}

.c5.c5.c5.c5:hover:before,
.c5.c5:before {
  border: 0px;
}

.c5.c5 .MuiSelect-select:focus {
  background-color: transparent;
}

.c13 {
  padding: 1.2rem 1.2rem 3.2rem;
  font-size: 1.6rem;
  line-height: 1.5;
  border-radius: 3px;
  background-color: #fff;
  border: 1px solid #BABEC4;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  margin-top: 3.2rem;
}

.c13 p {
  margin: 0;
}

.c13 ol {
  font-size: 1.4rem;
  line-height: 1.42857142;
  margin: 1.6rem 0 0 0;
  padding: 0;
  list-style-position: inside;
}

.c13 ol li {
  margin: 0 0 0.4rem 0;
}

.c14 {
  margin: 1.6rem 0 0.25rem;
  text-transform: uppercase;
  font-weight: 700;
  line-height: 2;
  -webkit-letter-spacing: 0.05rem;
  -moz-letter-spacing: 0.05rem;
  -ms-letter-spacing: 0.05rem;
  letter-spacing: 0.05rem;
  font-size: 1.2rem;
  color: #63656A;
}

.c15 {
  display: inline-block;
  font-size: 2.4rem;
  font-weight: 700;
  line-height: 1;
}

.c0 {
  position: fixed;
  top: 5.6rem;
  left: 0;
  bottom: 0;
  border-right: 1px solid #E6EAF0;
  width: calc(28rem - 3.2rem);
  padding: 0.8rem 1.6rem 2.4rem;
  background-color: #FAFCFE;
  overflow: auto;
  z-index: 2;
}

.c4 select {
  color: #fff;
  background-color: #e43b46;
}

.c4 option {
  color: #fff;
  background-color: #e43b46;
}

.c1 select {
  color: #fff;
  background-color: #000;
}

.c1 option {
  color: #fff;
  background-color: #000;
}

.c6 {
  font-size: 1.4rem;
  line-height: 2;
  padding: 0.9rem 1.2rem;
  width: 100%;
  text-align: left;
  background-color: #fff;
  border-radius: 3px;
  border: 1px solid #BABEC4;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
}

.c6:focus {
  background: #fff;
  border: 1px solid #4D73CE;
}

.c6:hover {
  border: 1px solid #fff;
  box-shadow: 0 0 0 4px #DBE3F5;
}

.c6:active {
  background-color: #fff;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6:disabled {
  cursor: auto;
  opacity: 0.65;
}

.c3 .MuiInputBase-root {
  background-color: #fff;
  font-size: 1.4rem;
  padding: 1.2rem !important;
}

.c3 .MuiOutlinedInput-root:hover .MuiOutlinedInput-notchedOutline {
  border-color: #fff;
  box-shadow: 0 0 0 4px #DBE3F5;
}

.c3 .Mui-focused .MuiOutlinedInput-notchedOutline {
  border: 1px solid #4D73CE !important;
  box-shadow: 0 0 0 0;
}

.c3 .MuiAutocomplete-input {
  padding: 0px !important;
  height: 2.4rem;
}

.c3 .MuiSvgIcon-root {
  font-size: 2rem;
}

.c3 .MuiAutocomplete-endAdornment {
  top: calc(50% - 12px);
}

.c7 {
  display: block;
  padding-bottom: 2rem;
  border-bottom: 1px solid #ccc;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 label {
  margin-right: 0.8rem;
}

.c11 .svg-icon path {
  fill: #63656A;
}

.c12 .tooltip {
  color: #222325;
  background-color: #fff;
  font-size: 1.2rem;
  line-height: 1.66666666;
  padding: 1.6rem;
  margin: 0.8rem 0;
  border-radius: 3px;
  box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.1);
}

.c8 {
  margin-left: 1.2rem;
}

.c10 .MuiSvgIcon-root {
  width: 2rem;
  height: 2rem;
  color: #4D73CE;
}

.c10.MuiIconButton-colorSecondary:hover,
.c10.MuiRadio-colorSecondary.Mui-checked:hover {
  background-color: #DBE3F5;
}

.c10.MuiRadio-colorSecondary.Mui-checked {
  color: #DBE3F5;
}

.c10.MuiRadio-root {
  color: #A6B9E6;
}

.c10.c10 {
  padding: 6px;
}

.c9 .MuiTypography-body1 {
  font-size: 1.4rem;
  line-height: 2;
  font-weight: 600;
  margin-left: 0.2rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      Location
    </label>
    <div
      aria-expanded={false}
      aria-owns={null}
      className="MuiAutocomplete-root c3 MuiAutocomplete-hasPopupIcon"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="combobox"
    >
      <div
        className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
          onClick={[Function]}
        >
          <input
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-controls={null}
            aria-invalid={false}
            autoCapitalize="none"
            autoComplete="off"
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            disabled={false}
            id="country-select"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            required={false}
            spellCheck="false"
            type="text"
            value="All"
          />
          <div
            className="MuiAutocomplete-endAdornment"
          >
            <button
              aria-label="Open"
              className="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              title="Open"
              type="button"
            >
              <span
                className="MuiIconButton-label"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </div>
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-2"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c4"
  >
    <label
      className="c2"
    >
      outbreak
    </label>
    <div
      className="MuiInputBase-root MuiInput-root MuiInput-underline c5"
      onClick={[Function]}
    >
      <div
        aria-haspopup="listbox"
        aria-labelledby="mui-component-select-outbreak"
        className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
        id="mui-component-select-outbreak"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex={0}
      >
        Ebola Outbreak
      </div>
      <input
        aria-hidden={true}
        className="MuiSelect-nativeInput"
        name="outbreak"
        onAnimationStart={[Function]}
        onChange={[Function]}
        tabIndex={-1}
        value="Ebola Outbreak"
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSelect-icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <label
    className="c2"
  >
    Timespan
  </label>
  <div
    data-test-id="open-date-range-button"
  >
    <button
      className="c6"
      onClick={[Function]}
    >
      Oct 1, 2014
       -
       
      Feb 20, 2016
    </button>
  </div>
  <div
    className="c7"
  >
    <fieldset
      className="MuiFormControl-root"
    >
      <label
        className="c2"
      >
        Data
      </label>
      <div
        aria-label="data"
        className="MuiFormGroup-root c8"
        role="radiogroup"
      >
        <label
          className="MuiFormControlLabel-root c9"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiRadio-root MuiRadio-colorSecondary c10 PrivateSwitchBase-checked-6 Mui-checked MuiIconButton-colorSecondary"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label"
            >
              <input
                checked={true}
                className="PrivateSwitchBase-input-8"
                disabled={false}
                name="data"
                onChange={[Function]}
                type="radio"
                value="cases"
              />
              <div
                className="PrivateRadioButtonIcon-root-9 PrivateRadioButtonIcon-checked-11"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-10"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </span>
          <span
            className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
          >
            Cases
          </span>
        </label>
        <div
          className="c11"
        >
          <label
            className="MuiFormControlLabel-root c9"
          >
            <span
              aria-disabled={false}
              className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiRadio-root MuiRadio-colorSecondary c10 MuiIconButton-colorSecondary"
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={null}
            >
              <span
                className="MuiIconButton-label"
              >
                <input
                  checked={false}
                  className="PrivateSwitchBase-input-8"
                  disabled={false}
                  name="data"
                  onChange={[Function]}
                  type="radio"
                  value="projected cases"
                />
                <div
                  className="PrivateRadioButtonIcon-root-9"
                >
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-10"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </div>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </span>
            <span
              className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
            >
              Projected Cases
            </span>
          </label>
          <div
            aria-describedby={null}
            aria-label="info"
            className="c12"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            title="There is some uncertainty associated with the projection values. Projections are reported as an interval that contains 95% of the projected values from several simulations. The width of this interval is a measure of the uncertainty associated with the projections."
          >
            <svg
              alt="info-icon"
              aria-hidden="true"
              className="svg-icon"
              height="14px"
              role="img"
              style={
                Object {
                  "height": "14px",
                  "width": "14px",
                }
              }
              viewBox="0 0 100 100"
              width="14px"
            >
              <g>
                <title>
                  info-icon
                </title>
                <path
                  d="M50,0 C22.3877016,0 0,22.3957661 0,50 C0,77.6203629 22.3877016,100 50,100 C77.6122984,100 100,77.6203629 100,50 C100,22.3957661 77.6122984,0 50,0 Z M50,22.1774194 C54.6766129,22.1774194 58.4677419,25.9685484 58.4677419,30.6451613 C58.4677419,35.3217742 54.6766129,39.1129032 50,39.1129032 C45.3233871,39.1129032 41.5322581,35.3217742 41.5322581,30.6451613 C41.5322581,25.9685484 45.3233871,22.1774194 50,22.1774194 Z M61.2903226,73.3870968 C61.2903226,74.7231855 60.2070565,75.8064516 58.8709677,75.8064516 L41.1290323,75.8064516 C39.7929435,75.8064516 38.7096774,74.7231855 38.7096774,73.3870968 L38.7096774,68.5483871 C38.7096774,67.2122984 39.7929435,66.1290323 41.1290323,66.1290323 L43.5483871,66.1290323 L43.5483871,53.2258065 L41.1290323,53.2258065 C39.7929435,53.2258065 38.7096774,52.1425403 38.7096774,50.8064516 L38.7096774,45.9677419 C38.7096774,44.6316532 39.7929435,43.5483871 41.1290323,43.5483871 L54.0322581,43.5483871 C55.3683468,43.5483871 56.4516129,44.6316532 56.4516129,45.9677419 L56.4516129,66.1290323 L58.8709677,66.1290323 C60.2070565,66.1290323 61.2903226,67.2122984 61.2903226,68.5483871 L61.2903226,73.3870968 Z"
                  fill="#000000"
                />
              </g>
            </svg>
          </div>
        </div>
        <label
          className="MuiFormControlLabel-root c9"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiRadio-root MuiRadio-colorSecondary c10 MuiIconButton-colorSecondary"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label"
            >
              <input
                checked={false}
                className="PrivateSwitchBase-input-8"
                disabled={false}
                name="data"
                onChange={[Function]}
                type="radio"
                value="risk"
              />
              <div
                className="PrivateRadioButtonIcon-root-9"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-10"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </span>
          <span
            className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
          >
            Risk
          </span>
        </label>
      </div>
    </fieldset>
  </div>
  <div
    className="c13"
  >
    <p>
      Total reported cases in
       
      <strong>
        All Locations
      </strong>
       from
       
      <strong>
        Wed Oct 01 2014
        –
        Sat Feb 20 2016
      </strong>
    </p>
    <div
      className=""
    >
      <div
        className="c14"
      >
        Reported cases
      </div>
      <div
        className="c15"
      >
        0
      </div>
    </div>
  </div>
</div>
`;

exports[`Tests for the connected Sidebar component with riskDataFiltersState should render with given state from Redux store 1`] = `
.c2 {
  margin: 2.4rem 1.2rem 0.4rem;
  font-size: 1.2rem;
  line-height: 2;
  -webkit-letter-spacing: 0.05rem;
  -moz-letter-spacing: 0.05rem;
  -ms-letter-spacing: 0.05rem;
  letter-spacing: 0.05rem;
  text-transform: uppercase;
  display: block;
  font-weight: 700;
}

.c5.c5 {
  background-color: #fff;
  font-size: 1.4rem;
  line-height: 2;
  padding: 0 1.2rem;
  display: block;
  border-radius: 3px;
  border: 1px solid #BABEC4;
}

.c5.c5.c5.c5:hover {
  border: 1px solid #fff;
  box-shadow: 0 0 0 4px #DBE3F5;
}

.c5.c5.c5.c5.Mui-focused {
  border: 1px solid #4D73CE;
}

.c5.c5.c5.c5:hover:before,
.c5.c5:before {
  border: 0px;
}

.c5.c5 .MuiSelect-select:focus {
  background-color: transparent;
}

.c13 {
  padding: 1.2rem 1.2rem 3.2rem;
  font-size: 1.6rem;
  line-height: 1.5;
  border-radius: 3px;
  background-color: #fff;
  border: 1px solid #BABEC4;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  margin-top: 3.2rem;
}

.c13 p {
  margin: 0;
}

.c13 ol {
  font-size: 1.4rem;
  line-height: 1.42857142;
  margin: 1.6rem 0 0 0;
  padding: 0;
  list-style-position: inside;
}

.c13 ol li {
  margin: 0 0 0.4rem 0;
}

.c0 {
  position: fixed;
  top: 5.6rem;
  left: 0;
  bottom: 0;
  border-right: 1px solid #E6EAF0;
  width: calc(28rem - 3.2rem);
  padding: 0.8rem 1.6rem 2.4rem;
  background-color: #FAFCFE;
  overflow: auto;
  z-index: 2;
}

.c4 select {
  color: #fff;
  background-color: #e43b46;
}

.c4 option {
  color: #fff;
  background-color: #e43b46;
}

.c1 select {
  color: #fff;
  background-color: #000;
}

.c1 option {
  color: #fff;
  background-color: #000;
}

.c6 {
  font-size: 1.4rem;
  line-height: 2;
  padding: 0.9rem 1.2rem;
  width: 100%;
  text-align: left;
  background-color: #fff;
  border-radius: 3px;
  border: 1px solid #BABEC4;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
}

.c6:focus {
  background: #fff;
  border: 1px solid #4D73CE;
}

.c6:hover {
  border: 1px solid #fff;
  box-shadow: 0 0 0 4px #DBE3F5;
}

.c6:active {
  background-color: #fff;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6:disabled {
  cursor: auto;
  opacity: 0.65;
}

.c3 .MuiInputBase-root {
  background-color: #fff;
  font-size: 1.4rem;
  padding: 1.2rem !important;
}

.c3 .MuiOutlinedInput-root:hover .MuiOutlinedInput-notchedOutline {
  border-color: #fff;
  box-shadow: 0 0 0 4px #DBE3F5;
}

.c3 .Mui-focused .MuiOutlinedInput-notchedOutline {
  border: 1px solid #4D73CE !important;
  box-shadow: 0 0 0 0;
}

.c3 .MuiAutocomplete-input {
  padding: 0px !important;
  height: 2.4rem;
}

.c3 .MuiSvgIcon-root {
  font-size: 2rem;
}

.c3 .MuiAutocomplete-endAdornment {
  top: calc(50% - 12px);
}

.c7 {
  display: block;
  padding-bottom: 2rem;
  border-bottom: 1px solid #ccc;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 label {
  margin-right: 0.8rem;
}

.c11 .svg-icon path {
  fill: #63656A;
}

.c12 .tooltip {
  color: #222325;
  background-color: #fff;
  font-size: 1.2rem;
  line-height: 1.66666666;
  padding: 1.6rem;
  margin: 0.8rem 0;
  border-radius: 3px;
  box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.1);
}

.c8 {
  margin-left: 1.2rem;
}

.c10 .MuiSvgIcon-root {
  width: 2rem;
  height: 2rem;
  color: #4D73CE;
}

.c10.MuiIconButton-colorSecondary:hover,
.c10.MuiRadio-colorSecondary.Mui-checked:hover {
  background-color: #DBE3F5;
}

.c10.MuiRadio-colorSecondary.Mui-checked {
  color: #DBE3F5;
}

.c10.MuiRadio-root {
  color: #A6B9E6;
}

.c10.c10 {
  padding: 6px;
}

.c9 .MuiTypography-body1 {
  font-size: 1.4rem;
  line-height: 2;
  font-weight: 600;
  margin-left: 0.2rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      Location
    </label>
    <div
      aria-expanded={false}
      aria-owns={null}
      className="MuiAutocomplete-root c3 MuiAutocomplete-hasPopupIcon"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="combobox"
    >
      <div
        className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
          onClick={[Function]}
        >
          <input
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-controls={null}
            aria-invalid={false}
            autoCapitalize="none"
            autoComplete="off"
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            disabled={false}
            id="country-select"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            required={false}
            spellCheck="false"
            type="text"
            value="All"
          />
          <div
            className="MuiAutocomplete-endAdornment"
          >
            <button
              aria-label="Open"
              className="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              title="Open"
              type="button"
            >
              <span
                className="MuiIconButton-label"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </div>
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-2"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c4"
  >
    <label
      className="c2"
    >
      outbreak
    </label>
    <div
      className="MuiInputBase-root MuiInput-root MuiInput-underline c5"
      onClick={[Function]}
    >
      <div
        aria-haspopup="listbox"
        aria-labelledby="mui-component-select-outbreak"
        className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
        id="mui-component-select-outbreak"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex={0}
      >
        Ebola Outbreak
      </div>
      <input
        aria-hidden={true}
        className="MuiSelect-nativeInput"
        name="outbreak"
        onAnimationStart={[Function]}
        onChange={[Function]}
        tabIndex={-1}
        value="Ebola Outbreak"
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSelect-icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <label
    className="c2"
  >
    Timespan
  </label>
  <div
    data-test-id="open-date-range-button"
  >
    <button
      className="c6"
      onClick={[Function]}
    >
      Oct 1, 2014
       -
       
      Feb 20, 2016
    </button>
  </div>
  <div
    className="c7"
  >
    <fieldset
      className="MuiFormControl-root"
    >
      <label
        className="c2"
      >
        Data
      </label>
      <div
        aria-label="data"
        className="MuiFormGroup-root c8"
        role="radiogroup"
      >
        <label
          className="MuiFormControlLabel-root c9"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiRadio-root MuiRadio-colorSecondary c10 MuiIconButton-colorSecondary"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label"
            >
              <input
                checked={false}
                className="PrivateSwitchBase-input-8"
                disabled={false}
                name="data"
                onChange={[Function]}
                type="radio"
                value="cases"
              />
              <div
                className="PrivateRadioButtonIcon-root-9"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-10"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </span>
          <span
            className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
          >
            Cases
          </span>
        </label>
        <div
          className="c11"
        >
          <label
            className="MuiFormControlLabel-root c9"
          >
            <span
              aria-disabled={false}
              className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiRadio-root MuiRadio-colorSecondary c10 MuiIconButton-colorSecondary"
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={null}
            >
              <span
                className="MuiIconButton-label"
              >
                <input
                  checked={false}
                  className="PrivateSwitchBase-input-8"
                  disabled={false}
                  name="data"
                  onChange={[Function]}
                  type="radio"
                  value="projected cases"
                />
                <div
                  className="PrivateRadioButtonIcon-root-9"
                >
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-10"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </div>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </span>
            <span
              className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
            >
              Projected Cases
            </span>
          </label>
          <div
            aria-describedby={null}
            aria-label="info"
            className="c12"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            title="There is some uncertainty associated with the projection values. Projections are reported as an interval that contains 95% of the projected values from several simulations. The width of this interval is a measure of the uncertainty associated with the projections."
          >
            <svg
              alt="info-icon"
              aria-hidden="true"
              className="svg-icon"
              height="14px"
              role="img"
              style={
                Object {
                  "height": "14px",
                  "width": "14px",
                }
              }
              viewBox="0 0 100 100"
              width="14px"
            >
              <g>
                <title>
                  info-icon
                </title>
                <path
                  d="M50,0 C22.3877016,0 0,22.3957661 0,50 C0,77.6203629 22.3877016,100 50,100 C77.6122984,100 100,77.6203629 100,50 C100,22.3957661 77.6122984,0 50,0 Z M50,22.1774194 C54.6766129,22.1774194 58.4677419,25.9685484 58.4677419,30.6451613 C58.4677419,35.3217742 54.6766129,39.1129032 50,39.1129032 C45.3233871,39.1129032 41.5322581,35.3217742 41.5322581,30.6451613 C41.5322581,25.9685484 45.3233871,22.1774194 50,22.1774194 Z M61.2903226,73.3870968 C61.2903226,74.7231855 60.2070565,75.8064516 58.8709677,75.8064516 L41.1290323,75.8064516 C39.7929435,75.8064516 38.7096774,74.7231855 38.7096774,73.3870968 L38.7096774,68.5483871 C38.7096774,67.2122984 39.7929435,66.1290323 41.1290323,66.1290323 L43.5483871,66.1290323 L43.5483871,53.2258065 L41.1290323,53.2258065 C39.7929435,53.2258065 38.7096774,52.1425403 38.7096774,50.8064516 L38.7096774,45.9677419 C38.7096774,44.6316532 39.7929435,43.5483871 41.1290323,43.5483871 L54.0322581,43.5483871 C55.3683468,43.5483871 56.4516129,44.6316532 56.4516129,45.9677419 L56.4516129,66.1290323 L58.8709677,66.1290323 C60.2070565,66.1290323 61.2903226,67.2122984 61.2903226,68.5483871 L61.2903226,73.3870968 Z"
                  fill="#000000"
                />
              </g>
            </svg>
          </div>
        </div>
        <label
          className="MuiFormControlLabel-root c9"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiRadio-root MuiRadio-colorSecondary c10 PrivateSwitchBase-checked-6 Mui-checked MuiIconButton-colorSecondary"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label"
            >
              <input
                checked={true}
                className="PrivateSwitchBase-input-8"
                disabled={false}
                name="data"
                onChange={[Function]}
                type="radio"
                value="risk"
              />
              <div
                className="PrivateRadioButtonIcon-root-9 PrivateRadioButtonIcon-checked-11"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-10"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </span>
          <span
            className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
          >
            Risk
          </span>
        </label>
      </div>
    </fieldset>
  </div>
  <div
    className="c13"
  >
    <p>
      Countries with the highest relative risk of Ebola spread
    </p>
    <ol>
      <li>
        Guinea
      </li>
      <li>
        Nigeria
      </li>
      <li>
        Ivory Coast
      </li>
      <li>
        Sierra Leone
      </li>
      <li>
        Mali
      </li>
      <li>
        Liberia
      </li>
      <li>
        Senegal
      </li>
      <li>
        Ghana
      </li>
      <li>
        Burkina Faso
      </li>
      <li>
        Democratic Republic of the Congo
      </li>
    </ol>
  </div>
</div>
`;
